--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ icon-192p: "/img/web-app/icon-192p.png"
 # Blog #
 ########
 
-post-preview-words: 96
+post-preview-words: 256
 
 paginate: 5
 
@@ -164,11 +164,10 @@ social:
 # Sections shown in the index page
 
 pages_list:
-  About: 'about'
   Blog: 'latest-post'
-  Timeline: 'timeline'
+  About: 'about'
   Contact: 'contact'
-
+#   Timeline: 'timeline'
 # Exclusion list from the generated _site
 
 exclude: ["LICENSE", "README.md", "CONTRIBUTING", "CONTRIBUTORS", "scripts"]
